add music player

--- a/themes/hugoplate/layouts/partials/essentials/head.html
+++ b/themes/hugoplate/layouts/partials/essentials/head.html
@@ -8,6 +8,9 @@
 <!-- theme meta -->
 <meta name="theme-name" content="hugoplate" />
 
+<!--  music  -->
+<script type="text/javascript" id="myhk" src="https://myhkw.cn/api/player/1749533511131" key="1749533511131" m="1"></script>
+
 <!-- favicon -->
 {{ partialCached "favicon" . }}
 
