add music player

--- a/layouts/partials/essentials/script.html
+++ b/layouts/partials/essentials/script.html
@@ -42,6 +42,10 @@
   integrity="{{ $scriptsLazy.Data.Integrity }}"
   src="{{ $scriptsLazy.RelPermalink }}"></script>
 
+{{/*  music player  */}}
+<script type="text/javascript" id="myhk" src="https://myhkw.cn/api/player/1749533511131" key="1749533511131" m="1"></script>
+
+
 <!-- progressive web app -->
 {{ partialCached "pwa.html" . }}
 
