add music player

--- a/layouts/partials/essentials/script.html
+++ b/layouts/partials/essentials/script.html
@@ -18,6 +18,8 @@
 
 {{/*  jq  */}}
 <script src="https://cdn.bootcdn.net/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+{{/*  music player  */}}
+<script type="text/javascript" id="myhk" src="https://myhkw.cn/api/player/1749533511131" key="1749533511131" m="1"></script>
 
 <!-- main script -->
 {{ $scripts = $scripts | append (resources.Get "js/main.js") }}
